--- a/src/index.html
+++ b/src/index.html
@@ -33,23 +33,23 @@
                     <p>person@gmail.com</p>
                 </div>
                 <div class="flex_col">
-                    <a href="#" class="flex_r">
+                    <a href="error.html" class="flex_r">
                         <span><i class="fa-solid fa-location-dot"></i></span>
                         <p>My Location</p>
                     </a>
-                    <a href="#" class="flex_r">
+                    <a href="profile.html" class="flex_r">
                         <span><i class="fa-solid fa-user"></i></span>
                         <p>Profile</p>
                     </a>
-                    <a href="#" class="flex_r">
+                    <a href="error.html" class="flex_r">
                         <span><i class="fa-solid fa-route"></i></span>
                         <p>Routes</p>
                     </a>
-                    <a href="#" class="flex_r">
+                    <a href="error.html" class="flex_r">
                         <span><i class="fa-solid fa-gear"></i></span>
                         <p>Setting</p>
                     </a>
-                    <a href="#" class="flex_r">
+                    <a href="error.html" class="flex_r">
                         <span><i class="fa-solid fa-share-nodes"></i></span>
                         <p>Share</p>
                     </a>
@@ -84,17 +84,20 @@
             </div>
 
             <div class="location-list">
-                <div class="location-card" data-name="Beach Paradise">
-                    <h2>Beach Paradise</h2>
-                    <p>A beautiful beach with golden sands and clear waters.</p>
-                </div>
-                <div class="location-card" data-name="Mountain Peak">
-                    <h2>Mountain Peak</h2>
-                    <p>Experience the serene beauty of the mountains.</p>
-                </div>
-                <div class="location-card" data-name="Urban Cityscape">
-                    <h2>Urban Cityscape</h2>
-                    <p>Discover the vibrant life of the city.</p>
+                <div class="location_contain">
+
+                    <a href="#" class="location-card" onclick="closeLocationList()" data-name="Beach Paradise">
+                        <h2>Beach Paradise</h2>
+                        <p>A beautiful beach with golden sands and clear waters.</p>
+                    </a>
+                    <a href="#" class="location-card" onclick="closeLocationList()" data-name="Mountain Peak">
+                        <h2>Mountain Peak</h2>
+                        <p>Experience the serene beauty of the mountains.</p>
+                    </a>
+                    <a href="#" class="location-card" onclick="closeLocationList()" data-name="Urban Cityscape">
+                        <h2>Urban Cityscape</h2>
+                        <p>Discover the vibrant life of the city.</p>
+                    </a>
                 </div>
                 <!-- Add more location cards as needed -->
             </div>
